# src/api/desktop/recommendations/response.ts
@@ -1,37 +1,62 @@
-import { RecommendationsQuery } from '../../../generated/graphql/types';
+import { NewTabRecommendationsQuery } from '../../../generated/graphql/types';
 import { components, paths } from '../../../generated/openapi/types';
+import { Logger } from '../../../logger';
 import { Unpack } from '../../../types';
 
-// unpack GraphQL generated types from RecommendationsQuery
+// unpack GraphQL generated type for 'recommendations' from NewTabRecommendationsQuery
 type GraphRecommendation = Unpack<
-  RecommendationsQuery['newTabSlate']['recommendations']
+  NewTabRecommendationsQuery['newTabSlate']['recommendations']
 >;
 
 // unpack exact OpenAPI generated types for API response
 export type RecommendationsResponse =
   paths['/desktop/v1/recommendations']['get']['responses']['200']['content']['application/json'];
+
 type Recommendation = components['schemas']['Recommendation'];
 
-export const appendUtmSource = (url: string): string => {
+export const appendUtmSource = (url: string, utmSource: string): string => {
   const urlObject = new URL(url);
   const searchParams = new URLSearchParams(urlObject.search);
 
-  // Set a static utm_source to attribute traffic to the new NewTab markets.
-  // TODO: [DIS-803] Make utm_source unique per ScheduledSurface,
-  //  before migrating Firefox Release en-US to this API.
-  searchParams.set('utm_source', 'pocket-newtab-bff');
+  // set utm_source to what is received from the graph.
+  // sets it to "pocket-newtab" if not received.
+  searchParams.set('utm_source', utmSource);
   urlObject.search = searchParams.toString();
 
   return urlObject.toString();
 };
 
+/**
+ * Validates the utmSource and logs error if falsey.
+ */
+export const validateAndSetDefaultUtmSource = (utmSource?: string): string => {
+  if (!utmSource) {
+    Logger(
+      'utmSource is undefined or null. Setting it to pocket-newtab'
+    ).error();
+
+    utmSource = 'pocket-newtab';
+  }
+  return utmSource;
+};
+
 export const mapRecommendation = (
-  recommendation: GraphRecommendation
+  recommendation: GraphRecommendation,
+  utmSource: string
 ): Recommendation => {
+  if (!utmSource) {
+    // Log error if utmSource is not received and set it to a default value.
+    Logger(
+      'utmSource is undefined or null. Setting it to pocket-newtab'
+    ).error();
+
+    utmSource = 'pocket-newtab';
+  }
+
   return {
     __typename: 'Recommendation',
     tileId: recommendation.tileId,
-    url: appendUtmSource(recommendation.corpusItem.url),
+    url: appendUtmSource(recommendation.corpusItem.url, utmSource),
     title: recommendation.corpusItem.title,
     excerpt: recommendation.corpusItem.excerpt,
     publisher: recommendation.corpusItem.publisher,
@@ -40,9 +65,14 @@ export const mapRecommendation = (
 };
 
 export const responseTransformer = (
-  recommendations: RecommendationsQuery
+  recommendations: NewTabRecommendationsQuery
 ): RecommendationsResponse => {
   return {
-    data: recommendations.newTabSlate.recommendations.map(mapRecommendation),
+    data: recommendations.newTabSlate.recommendations.map((recommendation) => {
+      return mapRecommendation(
+        recommendation,
+        recommendations.newTabSlate.utmSource
+      );
+    }),
   };
 };
